--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 language: python
+before_install:
+  - curl -O https://pypi.python.org/packages/source/p/pip/pip-7.1.2.tar.gz#md5=3823d2343d9f3aaab21cf9c917710196
+  - tar xvfz pip-7.1.2.tar.gz
+  - cd pip-7.1.2
+  - sudo python setup.py install
+  - sudo apt-get install python-gst0.10 gstreamer0.10-plugins-good gstreamer0.10-plugins-ugly
 # command to install dependencies
-install: "pip install -r requirements.txt --allow-external"
+install: "pip install -r requirements.txt"
 # command to run tests
-script: 
+script:
   - ./tests/RequestHandlerTest.py
   - ./tests/InterfaceTest.py
