--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
+sudo: false
 language: python
 before_install:
-	- sudo apt-get update -qq
-  - sudo apt-get install -qq python-gst0.10 gstreamer0.10-plugins-good gstreamer0.10-plugins-ugly
+	- apt-get update -qq
+  - apt-get install -qq python-gst0.10 gstreamer0.10-plugins-good gstreamer0.10-plugins-ugly
 # command to install dependencies
 install: "pip install -r requirements.txt"
 # command to run tests
