Added 'Secret Mode' and play count updating

--- a/configuration/settings.json
+++ b/configuration/settings.json
@@ -15,6 +15,10 @@
     "djCanControlPlayback": {
       "value": false,
       "description": "Allow DJ to control playback"
+    },
+    "secretMode": {
+      "value": true,
+      "description": "Update play counts"
     }
   }
 }
